--- a/Sanka2.html
+++ b/Sanka2.html
@@ -41,8 +41,17 @@
           0% {
             transform: translateX(0); /* 最初の位置 */
           }
-          100% {
+          25% {
             transform: translateX(-50%); /* 画像を左に50%スクロール */
+          }
+          50% {
+            transform: translateX(-100%); /* 画像を左に50%スクロール */
+          }
+          75% {
+            transform: translateX(50%); /* 画像を左に50%スクロール */
+          }
+          100% {
+            transform: translateX(100%); /* 画像を左に50%スクロール */
           }
         }
         #music-info {
