--- a/Sanka2.html
+++ b/Sanka2.html
@@ -41,16 +41,19 @@
           0% {
             transform: translateX(0); /* 最初の位置 */
           }
-          25% {
+          20% {
             transform: translateX(-50%); /* 画像を左に50%スクロール */
           }
-          50% {
+          40% {
             transform: translateX(-100%); /* 画像を左に50%スクロール */
           }
-          75% {
+          60% {
+            transform: translateX(-100%); /* 画像を左に50%スクロール */
+          }
+          80% {
             transform: translateX(50%); /* 画像を左に50%スクロール */
           }
-          100% {
+          80% {
             transform: translateX(100%); /* 画像を左に50%スクロール */
           }
         }
