--- a/Sanka2.html
+++ b/Sanka2.html
@@ -14,8 +14,8 @@
       const background = document.createElement('div');
       background.classList.add('background');
       background.style.position = 'fixed';
-      background.style.top = '0';
-      background.style.left = '0';
+ /*     background.style.top = '0';
+      background.style.left = '0';*/
       background.style.width = '600%'; /* 画像を横に2倍に広げる */
       background.style.height = '100vh'; /* 画面の高さいっぱいに設定 */
       background.style.background = 'url(\'./background.png\') repeat-x';
