--- a/Sanka2.html
+++ b/Sanka2.html
@@ -23,54 +23,79 @@
       content.textContent = '音楽を再生する';
       document.body.appendChild(content);
 
-      // CSSアニメーションの定義をJavaScriptで追加する
-      const style = document.createElement('style');
-      style.textContent = `
-      .background {
-  position: fixed;
-  /* top: 0;
-  left: 0; */
-  width: 600%; /* 画像を横に2倍に広げる */
-  height: 100vh; /* 画面の高さいっぱいに設定 */
-  background: url('./background.png') repeat-x;
-  animation: scrollBackground 60s linear infinite; /* アニメーションの設定 */
-}
-        @keyframes scrollBackground {
-          0% {
-            transform: translateX(0); /* 最初の位置 */
-          }
-          20% {
-            transform: translateX(-25%); /* 画像を左に50%スクロール */
-          }
-          40% {
-            transform: translateX(-100%); /* 画像を左に50%スクロール */
-          }
-          60% {
-            transform: translateX(-100%); /* 画像を左に50%スクロール */
-          }
-          80% {
-            transform: translateX(25%); /* 画像を左に50%スクロール */
-          }
-          80% {
-            transform: translateX(100%); /* 画像を左に50%スクロール */
-          }
-        }
-        #music-info {
-          position: fixed;
-          bottom: 20px;
-          right: 20px;
-          background-color: rgba(0, 0, 0, 0.7);
-          color: white;
-          padding: 10px 20px;
-          border-radius: 5px;
-          opacity: 0;
-          transition: opacity 0.5s ease-in-out;
-        }
-        #music-info.show {
-          opacity: 1;
-        }
-      `;
-      document.head.appendChild(style);
+// JavaScriptで要素を作成する
+const container = document.createElement('div');
+container.id = 'container';
+
+const mainimg = document.createElement('aside');
+mainimg.id = 'mainimg';
+
+
+const slide1 = document.createElement('div');
+slide1.classList.add('slide1');
+slide1.textContent = 'slide1';
+
+mainimg.appendChild(slide1);
+container.appendChild(mainimg);
+document.body.appendChild(container);
+
+// JavaScriptでCSSスタイルを適用する場合
+const style = document.createElement('style');
+style.textContent = `
+  /* CSSスライドショー設定 */
+  @keyframes slide1 {
+    0% { opacity: 0; transform: scale(1); }
+    10% { opacity: 0; }
+    20% { opacity: 1; }
+    50% { opacity: 1; }
+    60% { opacity: 0; }
+    100% { opacity: 0; transform: scale(1.2); }
+  }
+
+  /* 画像ブロック */
+  #mainimg {
+    clear: left;
+    text-indent: -9999px;
+    position: fixed; /* スクロールしても固定表示させる指定 */
+    top: 0;
+    width: 100%;
+    height: 100%;
+    z-index: -1;
+  }
+
+  /* 1枚画像の共通設定 */
+  .slide1 {
+    animation-timing-function: linear;
+    animation-duration: 15s; /* 実行する時間。「s」は秒の事。 */
+    animation-iteration-count: infinite; /* 実行する回数。「infinite」は無限に繰り返す意味。 */
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    animation-fill-mode: both;
+    animation-delay: 1s;
+  }
+
+
+  /* １枚目 */
+  .slide1 {
+    background: url(./background.png) no-repeat center center/cover;
+    animation-name: slide1; /* 上で設定しているキーフレーム（keyframes）の名前 */
+  }
+
+  /* 画面の高さが500px以下の場合の設定 */
+  @media screen and (max-height: 500px) {
+    /* 土台画像。Whats's Newブロックと重なるので非表示にしました */
+    .slide0 {
+      background-image: none;
+    }
+  }
+`;
+
+// head要素にスタイルを追加する
+document.head.appendChild(style);
+
 
       // 音楽プレーヤーを作成し再生する関数
       function createAndPlayAudio() {
