--- a/Sanka2.html
+++ b/Sanka2.html
@@ -6,145 +6,147 @@
   <title>Music Player</title>
 </head>
 <body>
-  <h1>音楽を再生する</h1>
 
   <script>
-    window.onload = function() {
+window.onload = function() {
 
-      // コンテンツ領域のスタイルをJavaScriptで設定する
-      const content = document.createElement('div');
-      content.classList.add('content');
-      content.style.padding = '20px';
-      content.style.marginTop = '20vh'; /* コンテンツを上にオフセット */
-      content.style.textAlign = 'center';
-      content.style.color = 'white';
-      content.style.fontSize = '24px';
-      content.style.zIndex = '1'; /* コンテンツが背景の上に表示されるように設定 */
-      content.textContent = '音楽を再生する';
-      document.body.appendChild(content);
+  // コンテンツ領域のスタイルをJavaScriptで設定する
+  const content = document.createElement('div');
+  content.classList.add('content');
+  content.style.padding = '20px';
+  content.style.marginTop = '20vh'; /* コンテンツを上にオフセット */
+  content.style.textAlign = 'center';
+  content.style.color = 'white';
+  content.style.fontSize = '24px';
+  content.style.zIndex = '1'; /* コンテンツが背景の上に表示されるように設定 */
+  content.textContent = '音楽を再生する';
+  document.body.appendChild(content);
 
-// JavaScriptで要素を作成する
-const container = document.createElement('div');
-container.id = 'container';
+  // JavaScriptで要素を作成する
+  const container = document.createElement('div');
+  container.id = 'container';
 
-const mainimg = document.createElement('aside');
-mainimg.id = 'mainimg';
+  const mainimg = document.createElement('aside');
+  mainimg.id = 'mainimg';
 
+  const slide1 = document.createElement('div');
+  slide1.classList.add('slide1');
+  slide1.textContent = 'slide1';
 
-const slide1 = document.createElement('div');
-slide1.classList.add('slide1');
-slide1.textContent = 'slide1';
+  mainimg.appendChild(slide1);
+  container.appendChild(mainimg);
+  document.body.appendChild(container);
 
-mainimg.appendChild(slide1);
-container.appendChild(mainimg);
-document.body.appendChild(container);
-
-// JavaScriptでCSSスタイルを適用する場合
-const style = document.createElement('style');
-style.textContent = `
-  /* CSSスライドショー設定 */
-  @keyframes slide1 {
-    0% { opacity: 1; transform: scale(1); }
-    10% { opacity: 1; }
-    20% { opacity: 1; }
-    50% { opacity: 1; }
-    60% { opacity: 1; }
-    100% { opacity: 1; transform: scale(1.5); }
-  }
-
-  /* 画像ブロック */
-  #mainimg {
-    clear: left;
-    text-indent: -9999px;
-    position: fixed; /* スクロールしても固定表示させる指定 */
-    top: 0;
-    width: 100%;
-    height: 100%;
-    z-index: -1;
-  }
-
-  /* 1枚画像の共通設定 */
-  .slide1 {
-    animation-timing-function: linear;
-    animation-duration: 15s; /* 実行する時間。「s」は秒の事。 */
-    animation-iteration-count: infinite; /* 実行する回数。「infinite」は無限に繰り返す意味。 */
-    position: absolute;
-    left: 0;
-    top: 0;
-    width: 100%;
-    height: 100%;
-    animation-fill-mode: both;
-    animation-delay: 1s;
-  }
-
-
-  /* １枚目 */
-  .slide1 {
-    background: url(./background.png) no-repeat center center/cover;
-    animation-name: slide1; /* 上で設定しているキーフレーム（keyframes）の名前 */
-  }
-
-  /* 画面の高さが500px以下の場合の設定 */
-  @media screen and (max-height: 500px) {
-    /* 土台画像。Whats's Newブロックと重なるので非表示にしました */
-    .slide0 {
-      background-image: none;
+  // JavaScriptでCSSスタイルを適用する場合
+  const style = document.createElement('style');
+  style.textContent = `
+    /* CSSスライドショー設定 */
+    @keyframes slide1 {
+      0% { opacity: 1; transform: scale(1); }
+      10% { opacity: 1; }
+      20% { opacity: 1; }
+      50% { opacity: 1; }
+      60% { opacity: 1; }
+      100% { opacity: 1; transform: scale(1.5); }
     }
+
+    /* 画像ブロック */
+    #mainimg {
+      clear: left;
+      text-indent: -9999px;
+      position: fixed; /* スクロールしても固定表示させる指定 */
+      top: 0;
+      width: 100%;
+      height: 100%;
+      z-index: -1;
+    }
+
+    /* １枚目 */
+    .slide1 {
+      animation-timing-function: linear;
+      animation-duration: 15s; /* 実行する時間。「s」は秒の事。 */
+      animation-iteration-count: infinite; /* 実行する回数。「infinite」は無限に繰り返す意味。 */
+      position: absolute;
+      left: 0;
+      top: 0;
+      width: 100%;
+      height: 100%;
+      animation-fill-mode: both;
+      animation-delay: 1s;
+    }
+
+    /* 通知のスタイル */
+    #music-info {
+      position: fixed;
+      top: 20px;
+      left: 50%;
+      transform: translateX(-50%);
+      background-color: rgba(0, 0, 0, 0.7);
+      color: white;
+      padding: 10px 20px;
+      border-radius: 5px;
+      opacity: 0;
+      transition: opacity 0.3s ease-in-out;
+      z-index: 2;
+    }
+
+    /* 表示用のクラス */
+    .show {
+      opacity: 1;
+    }
+  `;
+
+  // head要素にスタイルを追加する
+  document.head.appendChild(style);
+
+  // 音楽プレーヤーを作成し再生する関数
+  function createAndPlayAudio() {
+    // 音楽プレーヤーを作成
+    const audioElement = document.createElement('audio');
+    audioElement.id = 'musicplayer';
+    audioElement.loop = true; // ループ再生
+    audioElement.volume = 0.2; // 音量設定
+
+    // 音楽ファイルの設定
+    const sourceElement = document.createElement('source');
+    sourceElement.src = 'https://akaina0112.github.io/Test/bgm.mp3';
+    sourceElement.type = 'audio/mpeg';
+
+    audioElement.appendChild(sourceElement); // <audio>要素に音楽ファイルを追加
+    document.body.appendChild(audioElement); // <body>要素に<audio>要素を追加
+
+    // 音楽情報を表示する要素を作成
+    const musicInfo = document.createElement('div');
+    musicInfo.id = 'music-info';
+    musicInfo.textContent = '音楽名: Nightcore - Vicetone - Nevada'; // 音楽名を設定
+    document.body.appendChild(musicInfo); // <body>要素に<div>要素を追加
+
+    // 音楽情報の表示を通知風に
+    setTimeout(() => {
+      musicInfo.classList.add('show'); // 'show'クラスを追加して表示
+      console.log('音楽名を表示');
+    }, 100); // 少し遅延させて表示（ミリ秒単位）
+
+    // 5秒後に音楽情報を消す
+    setTimeout(() => {
+      musicInfo.classList.remove('show'); // 'show'クラスを削除して非表示
+      console.log('音楽名を消去');
+    }, 5100); // 5秒後に消えるように設定（ミリ秒単位）
+
+    // 音楽を再生する
+    audioElement.play().then(() => {
+      console.log('音楽が再生されました');
+    }).catch(error => {
+      console.log('音楽の再生に失敗しました:', error);
+    });
+
+    // イベントリスナーを削除（再生が開始されたら不要）
+    document.body.removeEventListener('click', createAndPlayAudio);
   }
-`;
 
-// head要素にスタイルを追加する
-document.head.appendChild(style);
-
-
-      // 音楽プレーヤーを作成し再生する関数
-      function createAndPlayAudio() {
-        // 音楽プレーヤーを作成
-        const audioElement = document.createElement('audio');
-        audioElement.id = 'musicplayer';
-        audioElement.loop = true; // ループ再生
-        audioElement.volume = 0.2; // 音量設定
-
-        // 音楽ファイルの設定
-        const sourceElement = document.createElement('source');
-        sourceElement.src = 'https://akaina0112.github.io/Test/bgm.mp3';
-        sourceElement.type = 'audio/mpeg';
-
-        audioElement.appendChild(sourceElement); // <audio>要素に音楽ファイルを追加
-        document.body.appendChild(audioElement); // <body>要素に<audio>要素を追加
-
-        // 音楽情報を表示する要素を作成
-        const musicInfo = document.createElement('div');
-        musicInfo.id = 'music-info';
-        musicInfo.textContent = '音楽名: Nightcore - Vicetone - Nevada'; // 音楽名を設定
-        document.body.appendChild(musicInfo); // <body>要素に<div>要素を追加
-
-        // 音楽情報の表示を通知風に
-        setTimeout(() => {
-          musicInfo.classList.add('show'); // 'show'クラスを追加して表示
-          console.log('音楽名を表示');
-        }, 100); // 少し遅延させて表示（ミリ秒単位）
-
-        // 5秒後に音楽情報を消す
-        setTimeout(() => {
-          musicInfo.classList.remove('show'); // 'show'クラスを削除して非表示
-          console.log('音楽名を消去');
-        }, 5100); // 5秒後に消えるように設定（ミリ秒単位）
-
-        // 音楽を再生する
-        audioElement.play().then(() => {
-          console.log('音楽が再生されました');
-        }).catch(error => {
-          console.log('音楽の再生に失敗しました:', error);
-        });
-
-        // イベントリスナーを削除（再生が開始されたら不要）
-        document.body.removeEventListener('click', createAndPlayAudio);
-      }
-
-      // ページをクリックしたときに createAndPlayAudio 関数を実行
-      document.body.addEventListener('click', createAndPlayAudio);
-    };
+  // ページをクリックしたときに createAndPlayAudio 関数を実行
+  document.body.addEventListener('click', createAndPlayAudio);
+};
   </script>
 </body>
 </html>
