--- a/Sanka2.html
+++ b/Sanka2.html
@@ -72,7 +72,9 @@ window.onload = function() {
       width: 100%;
       height: 100%;
       animation-fill-mode: both;
-      animation-delay: 1s;
+      animation-delay: 1s; 
+      background: url(./background.png) no-repeat center center/cover;
+    animation-name: slide1; /* 上で設定しているキーフレーム（keyframes）の名前 */
     }
 
     /* 通知のスタイル */
