--- a/Sanka.html
+++ b/Sanka.html
@@ -5,6 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>通知例</title>
     <style>
+        *{
+   background-image: url('./cat.gif');
+}
+
+
         #notification {
             display: none;
             position: fixed;
