--- a/Sanka.html
+++ b/Sanka.html
@@ -5,94 +5,116 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>通知例</title>
     <style>
-        *{
-   background-image: url('./cat.gif');
-}
+        /* 全体の背景に猫のGIFを設定 */
+        * {
+            background-image: url('./cat.gif');
+        }
 
-
+        /* 通知ボックスのスタイル */
         #notification {
-            display: none;
+            display: none; /* 初期状態では非表示 */
             position: fixed;
-            top: -100px; /* 初期状態で上に隠しておく */
+            top: -100px; /* 上端から隠しておく */
             left: 50%;
             transform: translateX(-50%);
             background-color: #444444; /* 背景色を濃くしてコントラストを高める */
             color: white;
             padding: 20px 30px; /* パディングを増やして読みやすくする */
             border-radius: 8px; /* 角を丸くする */
-          /*  z-index: 1000;*/
             font-size: 16px; /* フォントサイズを大きくする */
             font-weight: bold; /* フォントウェイトを太くする */
-            transition: top 0.5s ease; /* スライドダウンのトランジション */
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2); /* シャドウを追加して視認性を高める */
             text-align: center; /* テキストを中央揃え */
-            z-index: 9999;
-           transition: top 0.3s ease; /* トランジション効果を追加 */
+            z-index: 9999; /* 最前面に表示 */
+            transition: top 0.3s ease; /* トランジション効果を追加 */
         }
+
+        /* テキストのスタイル */
         #notification span {
             text-shadow: 0 0 10px rgba(255, 255, 255, 0.8); /* テキストの周りを明るくする */
         }
+
+        /* ボタンのスタイル */
         #notification button {
-        　　color: #e6e6fa; /* テキストの色を白に設定 */
+            color: #e6e6fa; /* テキストの色を白に設定 */
             margin-top: 10px;
-            padding: 10px 20px; /* ボタンのパディングを増やす */
+            padding: 10px 20px; /* パディングを増やす */
             background-color: transparent;
             background-image: url('./cat.gif'); /* 猫の画像を設定 */
             background-size: cover;
             background-position: center;
             background-repeat: no-repeat;
             border: none;
-            border-radius: 5px; /* ボタンの角を丸くする */
+            border-radius: 5px; /* 角を丸くする */
             cursor: pointer;
-            font-size: 14px; /* ボタンのフォントサイズを大きくする */
+            font-size: 14px; /* フォントサイズを大きくする */
             animation: catWalk 5s linear infinite; /* 猫の歩行アニメーションを設定 */
         }
+
+        /* ボタンのホバースタイル */
         #notification button:hover {
             opacity: 0.8; /* ホバー時に透明度を下げて少し暗くする */
         }
-    @keyframes catWalk {
-        0% { background-position: left top; }
-        100% { background-position: right top; }
-    }
+
+        /* 猫の歩行アニメーション */
+        @keyframes catWalk {
+            0% { background-position: left top; }
+            100% { background-position: right top; }
+        }
     </style>
 </head>
 <body>
     <div id="notification">
-        <span id="notification-message"></span> 
-        <br>
-        <span id="notification-message2">This shortcut has been disabled.</span>
-        <br>
+        <span id="notification-message"></span><br>
+        <span id="notification-message2"></span><br>
         <button id="notification-close">OK</button>
     </div>
-<script>
-// let akaina = 'This shortcut has been disabled.';
 
-document.addEventListener('keydown', function(event) {
-    if (event.ctrlKey && (event.key === 'u' || event.key === 's' || event.key === 'p')) {
-        event.preventDefault();
-        showNotification('このショートカットは無効化されています。');
-    }
-});
-document.addEventListener('contextmenu', function(event) {
-    event.preventDefault();
-    showNotification('右クリックは無効化されています。');
-});
+    <script>
+        // キーボードショートカットの無効化
+        document.addEventListener('keydown', function(event) {
+            if (event.ctrlKey && (event.key === 'u' || event.key === 's' || event.key === 'p')) {
+                event.preventDefault();
+                showNotification('このショートカットは無効化されています。');
+            }
+        });
 
-function showNotification(message) {
-    const notification = document.getElementById('notification');
-    const notificationMessage = document.getElementById('notification-message');
-    notificationMessage.textContent = message;
-    notification.style.display = 'block';
-    notification.style.top = '20px'; // 通知を表示する位置に設定
-}
+        // 右クリックの無効化
+        document.addEventListener('contextmenu', function(event) {
+            event.preventDefault();
+            showRightClickNotification('右クリックは無効化されています。');
+        });
 
-document.getElementById('notification-close').addEventListener('click', function() {
-    const notification = document.getElementById('notification');
-    notification.style.top = '-100px'; // 通知を上に隠す位置に戻す
-    setTimeout(() => {
-        notification.style.display = 'none';
-    }, 500); // トランジションの時間と合わせる
-});
-</script>
+        // 通知を表示する関数（ショートカット無効化用）
+        function showNotification(message) {
+            const notification = document.getElementById('notification');
+            const notificationMessage = document.getElementById('notification-message');
+            const notificationMessage2 = document.getElementById('notification-message2');
+            notificationMessage.textContent = message;
+            notificationMessage2.textContent = "This shortcut has been disabled.";
+            notification.style.display = 'block';
+            notification.style.top = '20px'; // 上からの位置を設定
+        }
+
+        // 通知を表示する関数（右クリック無効化用）
+        function showRightClickNotification(message) {
+            const notification = document.getElementById('notification');
+            const notificationMessage = document.getElementById('notification-message');
+            const notificationMessage2 = document.getElementById('notification-message2');
+            notificationMessage.textContent = message;
+            notificationMessage2.textContent = 'This right-click has been disabled.';
+            notification.style.display = 'block';
+            notification.style.top = '20px'; // 上からの位置を設定
+        }
+
+        // OKボタンをクリックしたときの処理
+        document.getElementById('notification-close').addEventListener('click', function() {
+            const notification = document.getElementById('notification');
+            notification.style.top = '-100px'; // 上に隠す位置に設定
+            setTimeout(() => {
+                notification.style.display = 'none';
+            }, 500); // トランジション時間と合わせる
+        });
+    </script>
 </body>
 </html>
