--- a/Sanka2.html
+++ b/Sanka2.html
@@ -115,7 +115,7 @@ window.onload = function() {
       border-radius: 5px;
       opacity: 0;
       transition: opacity 0.3s ease-in-out;
-      z-index: 2;
+      z-index: 9999999;
     }
 
     /* 表示用のクラス */
