--- a/Sanka2.html
+++ b/Sanka2.html
@@ -9,7 +9,8 @@
 
   <script>
 window.onload = function() {
-
+  //アニメーションを切り替え関数
+    switchSlide();
   // コンテンツ領域のスタイルをJavaScriptで設定する
   const content = document.createElement('div');
   content.classList.add('content');
@@ -198,11 +199,6 @@ function switchSlide() {
     });
 }
 
-// ページロード後に実行
-window.onload = function() {
-    // ここで画像切り替えの関数を呼び出す
-    switchSlide();
-};
 
   </script>
 </body>
