--- a/Sanka2.html
+++ b/Sanka2.html
@@ -31,8 +31,12 @@ window.onload = function() {
   const slide1 = document.createElement('div');
   slide1.classList.add('slide1');
   slide1.textContent = 'slide1';
+  const slide2 = document.createElement('div');
+  slide2.classList.add('slide2');
+  slide2.textContent = 'slide2';
 
   mainimg.appendChild(slide1);
+  mainimg.appendChild(slide2);
   container.appendChild(mainimg);
   document.body.appendChild(container);
 
