--- a/Sanka2.html
+++ b/Sanka2.html
@@ -92,6 +92,26 @@ window.onload = function() {
       animation-delay: 1s;
       background: url(./background.png) no-repeat center center/cover;
       animation-name: slide1; /* 上で設定しているキーフレーム（keyframes）の名前 */
+    } 
+    /* 2枚目 */
+    .slide2 {
+      background-position: center center;
+      background-repeat: no-repeat;
+      background-attachment: fixed;
+      background-size: cover;
+      background-color: #464646;
+      animation-timing-function: linear;
+      animation-duration: 15s; /* 実行する時間。「s」は秒の事。 */
+      animation-iteration-count: infinite; /* 実行する回数。「infinite」は無限に繰り返す意味。 */
+      position: absolute;
+      left: 0;
+      top: 0;
+      width: 100%;
+      height: 100%;
+      animation-fill-mode: both;
+      animation-delay: 1s;
+      background: url(./background.png) no-repeat center center/cover;
+      animation-name: slide2; /* 上で設定しているキーフレーム（keyframes）の名前 */
     }
 
     /* 通知のスタイル */
