--- a/Sanka2.html
+++ b/Sanka2.html
@@ -114,7 +114,7 @@ window.onload = function() {
       animation-name: slide2; /* 上で設定しているキーフレーム（keyframes）の名前 */
     }
 
-        #notification {
+        .music-info {
             display: none; /* 初期状態では非表示 */
             position: fixed;
             top: -100px; /* 上端から隠しておく */
@@ -133,7 +133,7 @@ window.onload = function() {
         }
 
         /* テキストのスタイル */
-        #notification span {
+        .music-info span {
             text-shadow: 0 0 10px rgba(255, 255, 255, 0.8); /* テキストの周りを明るくする */
         }
 
