--- a/Sanka2.html
+++ b/Sanka2.html
@@ -130,6 +130,8 @@ window.onload = function() {
       text-align: center; /* テキストを中央揃え */
       z-index: 9999; /* 最前面に表示 */
       transition: top 0.3s ease, opacity 0.3s ease; /* トランジション効果を追加 */
+      /* テキストを光らせる効果 */
+  　　text-shadow: 0 0 10px rgba(255, 255, 255, 0.8); /* 白色のぼかしを追加して光らせる */
     }
 
     /* 表示用のクラス */
