--- a/Sanka2.html
+++ b/Sanka2.html
@@ -43,6 +43,7 @@ window.onload = function() {
   // JavaScriptでCSSスタイルを適用する場合
   const style = document.createElement('style');
   style.textContent = `
+  *{text-shadow: 0 0 10px rgba(255, 255, 255, 0.8);}
     /* CSSスライドショー設定 */
     @keyframes slide1 {
       0% { opacity: 1; transform: scale(1.2); }
