--- a/Sanka2.html
+++ b/Sanka2.html
@@ -63,7 +63,7 @@ window.onload = function() {
 
   // JavaScriptで要素を作成する
   const container = document.createElement('div');
-  container.id = 'container';
+//  container.id = 'container';
 
   const mainimg = document.createElement('aside');
   mainimg.id = 'mainimg';
