--- a/Sanka2.html
+++ b/Sanka2.html
@@ -62,8 +62,8 @@ window.onload = function() {
   document.body.appendChild(content);
 
   // JavaScriptで要素を作成する
-  const container = document.createElement('div');
-//  container.id = 'container';
+//  const container = document.createElement('div');
+  container.id = 'container';
 
   const mainimg = document.createElement('aside');
   mainimg.id = 'mainimg';
