--- a/Sanka2.html
+++ b/Sanka2.html
@@ -46,8 +46,8 @@ window.onload = function() {
   saleInfoSection.appendChild(paragraph);
 
   // コンテナ要素に追加する
-  const container = document.getElementById('container');
-  container.appendChild(saleInfoSection);
+//  const container = document.getElementById('container');
+//  container.appendChild(saleInfoSection);
   
   // コンテンツ領域のスタイルをJavaScriptで設定する
   const content = document.createElement('div');
@@ -62,8 +62,8 @@ window.onload = function() {
   document.body.appendChild(content);
 
   // JavaScriptで要素を作成する
-//  const container = document.createElement('div');
-//  container.id = 'container';
+  const container = document.createElement('div');
+  container.id = 'container';
 
   const mainimg = document.createElement('aside');
   mainimg.id = 'mainimg';
