--- a/Sanka2.html
+++ b/Sanka2.html
@@ -9,7 +9,7 @@
 
 <script>
 window.onload = function() {
-    // ModaalのCSSを読み込む
+/*    // ModaalのCSSを読み込む
   const modaalCSS = document.createElement('link');
   modaalCSS.rel = 'stylesheet';
   modaalCSS.type = 'text/css';
@@ -48,7 +48,7 @@ window.onload = function() {
   // コンテナ要素に追加する
 //  const container = document.getElementById('container');
 //  container.appendChild(saleInfoSection);
-  
+  */
   // コンテンツ領域のスタイルをJavaScriptで設定する
   const content = document.createElement('div');
   content.classList.add('content');
