--- a/akaina.html
+++ b/akaina.html
@@ -1,56 +1,63 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ja">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>JavaScriptで動的にモーダルウィンドウを作成する</title>
-    <!-- Modaal CSS を追加 -->
-    <style>
-
-    </style>
 </head>
 <body>
     <script>
-window.onload = function() {
-    // ページの読み込みが完了したらCSSファイルを動的に追加する
-    var link = document.createElement('link');
-    link.rel = 'stylesheet';
-    link.href = 'https://cdnjs.cloudflare.com/ajax/libs/Modaal/0.4.4/css/modaal.min.css';
-    document.head.appendChild(link);
+        // スクリプトを動的に読み込むための関数
+        function loadScript(url, callback) {
+            var script = document.createElement("script");
+            script.type = "text/javascript";
+            script.src = url;
+            script.onload = callback;
+            document.head.appendChild(script);
+        }
 
-    // ModaalのJavaScriptファイルを動的に追加する
-    var script = document.createElement('script');
-    script.src = 'https://cdnjs.cloudflare.com/ajax/libs/Modaal/0.4.4/js/modaal.min.js';
-    script.onload = function() {
-        // Modaalの初期化
-        var modalOptions = {
-            // ここにModaalのオプションを設定する
+        // スタイルシートを動的に読み込むための関数
+        function loadStylesheet(url) {
+            var link = document.createElement("link");
+            link.rel = "stylesheet";
+            link.href = url;
+            document.head.appendChild(link);
+        }
+
+        window.onload = function() {
+            // jQueryを動的に読み込む
+            loadScript("https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js", function() {
+                console.log("jQueryが読み込まれました");
+
+                // ModaalのCSSを動的に読み込む
+                loadStylesheet("https://cdnjs.cloudflare.com/ajax/libs/Modaal/0.4.4/css/modaal.min.css");
+
+                // ModaalのJavaScriptを動的に読み込む
+                loadScript("https://cdnjs.cloudflare.com/ajax/libs/Modaal/0.4.4/js/modaal.min.js", function() {
+                    console.log("Modaalが読み込まれました");
+
+                    // Modaalの初期化
+                    var modalOptions = {
+                        // Modaalのオプションをここに設定する
+                    };
+
+                    // 動的に生成した要素をモーダルのコンテンツとして設定する
+                    var modalContent = document.createElement('div');
+                    modalContent.innerHTML = '<p>ここに動的に追加したコンテンツを入れます。</p>';
+
+                    // Modaalに渡すオプション
+                    var options = {
+                        content_source: modalContent,
+                        background: '#333', // モーダルの背景色
+                        type: 'inline' // モーダルのタイプ
+                    };
+
+                    // Modaalの初期化とモーダルの表示
+                    var modaal = new Modaal(options);
+                    modaal.open();
+                });
+            });
         };
-        // モーダルを初期化するコードを記述する
-        var modal = new Modaal('.modal', modalOptions);
-    };
-    document.body.appendChild(script);
-
-    // 新しい要素を作成してモーダルの内容を設定
-    var modalContent = document.createElement('div');
-    modalContent.innerHTML = '<p>ここに動的に追加したコンテンツを入れます。</p>';
-
-    // スタイルを直接適用する
-    modalContent.style.textShadow = '0 0 10px rgba(255, 255, 255, 0.8)'; // テキストを光らせる
-    modalContent.style.color = '#fff'; // テキストの色を白に設定
-
-    // 新しく作成した要素をModaalに追加
-    var options = {
-        content_source: modalContent,
-        background: '#333', // モーダルの背景色
-        type: 'inline' // モーダルのタイプ
-    };
-    
-    // Modaalの初期化とモーダルの表示
-    var modaal = new Modaal(options);
-    modaal.open();
-};
-
     </script>
 </body>
 </html>
