--- a/akaina.html
+++ b/akaina.html
@@ -46,8 +46,8 @@
                         type: 'inline'
                     };
 
-                    // Modaalの初期化と表示
-                    var modaal = new Modaal(options);
+              //      // Modaalの初期化と表示
+                //    var modaal = new Modaal(options);
                     modaal.open();
                 });
             });
