--- a/akaina.html
+++ b/akaina.html
@@ -47,7 +47,7 @@
                     };
 
               //      // Modaalの初期化と表示
-                //    var modaal = new Modaal(options);
+                    var modaal = new Modaal(options);
                     modaal.open();
                 });
             });
