--- a/akaina.html
+++ b/akaina.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>JavaScriptで動的にモーダルウィンドウを作成する</title>
+    <style>
+        /* 初期のスタイルはここで定義 */
+    </style>
 </head>
 <body>
     <script>
@@ -47,27 +50,50 @@
             // OKボタンを生成してテキストコンテナに追加
             var okButton = document.createElement('button');
             okButton.textContent = 'OK';
+            okButton.style.display = 'flex';
+            okButton.style.justifyContent = 'center';
+            okButton.style.alignItems = 'center';
+            okButton.style.width = '250px';
+            okButton.style.margin = '0 auto';
+            okButton.style.padding = '.9em 2em';
+            okButton.style.border = 'none';
+            okButton.style.borderRadius = '25px';
+            okButton.style.backgroundColor = '#2589d0';
+            okButton.style.color = '#fff';
+            okButton.style.fontWeight = '600';
+            okButton.style.fontSize = '1em';
+            okButton.style.cursor = 'pointer';
+            okButton.style.transition = 'background-color 0.3s, transform 0.3s';
+            okButton.classList.add('button'); // ボタンにクラスを追加
             okButton.onclick = function() {
                 // OKボタンがクリックされたときの処理
                 closeOverlay();
             };
-            okButton.style.backgroundColor = '#007bff';
-            okButton.style.color = 'white';
-            okButton.style.border = 'none';
-            okButton.style.padding = '10px 20px';
-            okButton.style.cursor = 'pointer';
-            okButton.style.marginTop = '20px';
             textContainer.appendChild(okButton);
 
             document.body.appendChild(textContainer);
 
-            // スタイル要素を生成してボタンのスタイルを設定する
+            // スタイル要素を生成してボタンのホバー時のアニメーションを設定する
             var style = document.createElement('style');
             style.textContent = `
-                /* 光るテキストのスタイル */
-                .glowing-text {
-                    color: #fff;
-                    text-shadow: 0 0 10px #00f, 0 0 20px #0ff, 0 0 30px #0ff, 0 0 40px #0ff, 0 0 70px #0ff, 0 0 80px #0ff, 0 0 100px #0ff, 0 0 150px #0ff;
+                .button:hover {
+                    background-color: #1c6ea4;
+                    animation: anime-button-38 .3s linear infinite;
+                }
+
+                @keyframes anime-button-38 {
+                    20% {
+                        transform: translate(-2px, 2px);
+                    }
+                    40% {
+                        transform: translate(-2px, -2px);
+                    }
+                    60% {
+                        transform: translate(2px, 2px);
+                    }
+                    80% {
+                        transform: translate(2px, -2px);
+                    }
                 }
             `;
             document.head.appendChild(style);
