--- a/Sanka2.html
+++ b/Sanka2.html
@@ -143,6 +143,8 @@ window.onload = function() {
             font-size: 1em;
             cursor: pointer; /* ホバー時のカーソルをポインターにする */
             transition: background-color 0.3s, transform 0.3s; /* ホバー時のトランジションを設定 */
+            background-color: #1c6ea4; /* ホバー時の背景色 */
+            animation: anime-button-38 .3s linear infinite; /* ホバー時のアニメーションを適用 */
         }
 
         .button:hover {
