--- a/Sanka.html
+++ b/Sanka.html
@@ -86,6 +86,9 @@
     </div>
 
     <script>
+        window.onload = function() {
+            
+        }
         // キーボードショートカットの無効化
         document.addEventListener('keydown', function(event) {
             if (event.ctrlKey && (event.key === 'u' || event.key === 's' || event.key === 'p')) {
