--- a/Sanka2.html
+++ b/Sanka2.html
@@ -6,7 +6,7 @@
   <title>Music Player</title>
 </head>
 <body>
-
+<script src="copy.js"></script>
 <script>
 window.onload = function() {
             // 背景用のオーバーレイ要素を生成
