--- a/Sanka2.html
+++ b/Sanka2.html
@@ -6,8 +6,9 @@
   <title>Music Player</title>
 </head>
 <body>
-<script src="copy.js"></script>
+
 <script>
+import './copy.js';
 window.onload = function() {
             // 背景用のオーバーレイ要素を生成
             var overlay = document.createElement('div');
